--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,23 +9,23 @@ RUN conda update conda && \
 FROM base as dependencies
 
 ENV PATH="/opt/venv/bin:$PATH"
-WORKDIR /opt/stactools-ephemeral
+WORKDIR /opt/stactools-cmip6
 COPY --from=base /opt/conda /opt/conda
 COPY pyproject.toml ./
-COPY src/stactools/ephemeral/__init__.py src/stactools/ephemeral/
+COPY src/stactools/cmip6/__init__.py src/stactools/cmip6/
 RUN apt-get -y -q update \
     && apt-get -y -q install build-essential \
     && rm -rf /var/lib/apt/lists/
 RUN python -m venv /opt/venv
 RUN pip install . \
     && ls /opt/venv \
-    && rm -r /opt/venv/lib/python3.11/site-packages/stactools/ephemeral
+    && rm -r /opt/venv/lib/python3.11/site-packages/stactools/cmip6
 
 
 FROM dependencies as builder
 
 ENV PATH="/opt/venv/bin:$PATH"
-WORKDIR /opt/stactools-ephemeral
+WORKDIR /opt/stactools-cmip6
 COPY --from=base /opt/conda /opt/conda
 COPY --from=dependencies /opt/venv /opt/venv
 COPY pyproject.toml ./
@@ -33,14 +33,14 @@ COPY src ./src
 RUN pip install -U pip \
     && pip install .
 WORKDIR /
-RUN rm -rf /opt/stactools-ephemeral
-CMD [ "stac", "ephemeralcmd" ]
+RUN rm -rf /opt/stactools-cmip6
+CMD [ "stac", "cmip6" ]
 
 
 FROM dependencies as dev-dependencies
 
 ENV PATH="/opt/venv/bin:$PATH"
-WORKDIR /opt/stactools-ephemeral
+WORKDIR /opt/stactools-cmip6
 COPY --from=dependencies /opt/venv /opt/venv
 COPY pyproject.toml .
 RUN pip install -e '.[dev]' \
@@ -50,8 +50,8 @@ RUN pip install -e '.[dev]' \
 FROM dev-dependencies as dev-builder
 
 ENV PATH="/opt/venv/bin:$PATH"
-WORKDIR /opt/stactools-ephemeral
+WORKDIR /opt/stactools-cmip6
 COPY --from=base /opt/conda /opt/conda
 COPY --from=dependencies /opt/venv /opt/venv
 COPY . .
-CMD [ "stac", "ephemeralcmd" ]
+CMD [ "stac", "cmip6" ]
